--- a/iziozi/build.gradle
+++ b/iziozi/build.gradle
@@ -21,4 +21,5 @@ android {
 dependencies {
     compile 'com.android.support:support-v4:18.0.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile files('libs/simple-xml-2.7.1.jar')
 }
