--- a/iziozi/src/main/AndroidManifest.xml
+++ b/iziozi/src/main/AndroidManifest.xml
@@ -6,9 +6,10 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:name=".core.SMIziOziApplication">
         <activity
-            android:name="it.smdevelopment.iziozi.HomeActivity"
+            android:name=".gui.BoardActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@style/FullscreenTheme" >
@@ -19,7 +20,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".CreateButtonActivity"
+        <activity android:name=".gui.CreateButtonActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name">
         </activity>
