--- a/iziozi/build.gradle
+++ b/iziozi/build.gradle
@@ -22,4 +22,6 @@ dependencies {
     compile 'com.android.support:support-v4:18.0.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile files('libs/simple-xml-2.7.1.jar')
+    compile files('libs/ormlite-core-4.48.jar')
+    compile files('libs/ormlite-android-4.48.jar')
 }
