--- a/iziozi/build.gradle
+++ b/iziozi/build.gradle
@@ -19,9 +19,13 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:18.0.0'
+    compile 'com.android.support:support-v4:19.0.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile files('libs/simple-xml-2.7.1.jar')
     compile files('libs/ormlite-core-4.48.jar')
     compile files('libs/ormlite-android-4.48.jar')
+//chromecast support
+    //compile 'com.google.android.gms:play-services:4.3.23'
+    //compile 'com.android.support:support-v7-mediarouter:19.0.0'
+
 }
