--- a/iziozi/src/main/AndroidManifest.xml
+++ b/iziozi/src/main/AndroidManifest.xml
@@ -4,10 +4,14 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/logo_org192"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         android:name=".core.SMIziOziApplication">
+
+        <!--<meta-data android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />-->
+
         <activity
             android:name=".gui.BoardActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
