--- a/iziozi/src/main/AndroidManifest.xml
+++ b/iziozi/src/main/AndroidManifest.xml
@@ -1,6 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2014 Martino Lessio -
+  ~ www.martinolessio.com
+  ~ martino [at] iziozi [dot] org
+  ~
+  ~
+  ~ This file is part of the IziOzi project.
+  ~
+  ~ IziOzi is free software:
+  ~ you can redistribute it and/or modify it under the terms of the GNU General Public
+  ~ License as published by the Free Software Foundation, either version 3 of the License,
+  ~ or (at your option) any later version.
+  ~
+  ~ IziOzi is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
+  ~ without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+  ~ See the GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License along with IziOzi.
+  ~ If not, see http://www.gnu.org/licenses/.
+  -->
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="it.smdevelopment.iziozi" >
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
 
     <application
         android:name="it.smdevelopment.iziozi.core.SMIziOziApplication"
@@ -8,6 +31,7 @@
         android:icon="@drawable/logo_org192"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
 
         <!--
             <meta-data android:name="com.google.android.gms.version"
@@ -30,7 +54,8 @@
         <activity
             android:name="it.smdevelopment.iziozi.gui.CreateButtonActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleTop">
             <meta-data android:name="android.app.default_searchable"
                 android:value="it.smdevelopment.iziozi.gui.SMImagesSearchActivity"/>
 
