--- a/iziozi/src/main/AndroidManifest.xml
+++ b/iziozi/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
     <application
         android:name="it.smdevelopment.iziozi.core.SMIziOziApplication"
         android:allowBackup="true"
-        android:icon="@drawable/logo_org192"
+        android:icon="@drawable/logo_org"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
