--- a/iziozi/src/main/AndroidManifest.xml
+++ b/iziozi/src/main/AndroidManifest.xml
@@ -24,9 +24,14 @@
     package="it.smdevelopment.iziozi" >
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
+    <!-- Include following permission if you load images from Internet -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- Include following permission if you want to allow UIL to cache images on SD card -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 
     <application
-        android:name="it.smdevelopment.iziozi.core.SMIziOziApplication"
+        android:name=".core.IOApplication"
         android:allowBackup="true"
         android:icon="@drawable/logo_org"
         android:label="@string/app_name"
@@ -41,7 +46,7 @@
         <meta-data android:name="android.app.default_searchable" android:value=".SMImagesSearchActivity" />
 
         <activity
-            android:name="it.smdevelopment.iziozi.gui.BoardActivity"
+            android:name=".gui.IOBoardActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@style/FullscreenTheme" >
@@ -51,17 +56,32 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
-            android:name="it.smdevelopment.iziozi.gui.CreateButtonActivity"
+            android:name=".gui.IOCreateButtonActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:launchMode="singleTop">
             <meta-data android:name="android.app.default_searchable"
-                android:value="it.smdevelopment.iziozi.gui.SMImagesSearchActivity"/>
+                android:value="it.smdevelopment.iziozi.gui.IORemoteImageSearchActivity"/>
 
         </activity>
+
         <activity
-            android:name="it.smdevelopment.iziozi.gui.SMImagesSearchActivity"
+            android:name=".gui.IOLocalImageSearchActivity"
+            android:label="@string/app_name" >
+<!--
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable"/>
+-->
+        </activity>
+
+        <activity
+            android:name=".gui.IORemoteImageSearchActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
@@ -70,6 +90,8 @@
             <meta-data android:name="android.app.searchable"
                 android:resource="@xml/searchable"/>
         </activity>
+
+
     </application>
 
 </manifest>
