--- a/iziozi/src/main/AndroidManifest.xml
+++ b/iziozi/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <!-- Include following permission if you want to allow UIL to cache images on SD card -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".core.IOApplication"
