--- a/iziozi/build.gradle
+++ b/iziozi/build.gradle
@@ -23,7 +23,7 @@ apply plugin: 'android'
 
 android {
     signingConfigs {
-        Ma {
+        IziOzi {
         }
     }
     compileSdkVersion 19
@@ -31,14 +31,17 @@ android {
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 19
-        versionCode 1
+        versionCode 20140913
         versionName "1.0"
+        signingConfig signingConfigs.IziOzi
     }
     buildTypes {
         release {
             runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
+    }
+    productFlavors {
     }
 }
 
