--- a/iziozi/src/main/AndroidManifest.xml
+++ b/iziozi/src/main/AndroidManifest.xml
@@ -91,7 +91,7 @@
         </activity>
         <activity
             android:name="it.iziozi.iziozi.gui.IOAboutActivity"
-            android:label="@string/title_activity_ioabout" >
+            android:label="@string/app_name" >
         </activity>
     </application>
 
