--- a/iziozi/build.gradle
+++ b/iziozi/build.gradle
@@ -57,4 +57,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:19.+'
     compile 'com.loopj.android:android-async-http:1.4.5'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
+    compile files('libs/ThinkGear.jar')
 }
