--- a/iziozi/build.gradle
+++ b/iziozi/build.gradle
@@ -18,8 +18,22 @@
  * You should have received a copy of the GNU General Public License along with IziOzi.
  * If not, see http://www.gnu.org/licenses/.
  */
-
 apply plugin: 'android'
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 
 android {
     signingConfigs {
@@ -29,16 +43,14 @@ android {
     compileSdkVersion 19
     buildToolsVersion '20.0.0'
     defaultConfig {
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 19
-        versionCode 20140919
-        versionName '1.1'
+        versionCode 20150311
+        versionName '1.3.1'
         signingConfig signingConfigs.IziOzi
     }
     buildTypes {
         release {
-            runProguard false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
     productFlavors {
@@ -58,4 +70,7 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
     compile files('libs/ThinkGear.jar')
     compile 'com.joanzapata.android:android-iconify:1.0.6'
+    compile('com.crashlytics.sdk.android:crashlytics:2.2.0@aar') {
+        transitive = true;
+    }
 }
