--- a/iziozi/src/main/AndroidManifest.xml
+++ b/iziozi/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
     <application
         android:name="it.iziozi.iziozi.core.IOApplication"
         android:allowBackup="true"
+        android:largeHeap="true"
         android:icon="@drawable/logo_org"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
@@ -103,6 +104,9 @@
             android:name="it.iziozi.iziozi.gui.IOAboutActivity"
             android:label="@string/app_name" >
         </activity>
+        <meta-data
+            android:name="com.crashlytics.ApiKey"
+            android:value="21a2e56b3497242af9009ec69be93666a23370ed" />
     </application>
 
 </manifest>
