--- a/iziozi/src/main/AndroidManifest.xml
+++ b/iziozi/src/main/AndroidManifest.xml
@@ -31,19 +31,19 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
-    <uses-feature android:name="android.hardware.camera"
-        android:required="false"/>
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
 
     <!-- GCM requires a Google account. -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
 
-
     <application
-        android:name="it.iziozi.iziozi.core.IOApplication"
+        android:name=".core.IOApplication"
         android:allowBackup="true"
-        android:largeHeap="true"
         android:icon="@drawable/logo_org"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:theme="@style/AppTheme" >
 
         <!--
@@ -56,7 +56,7 @@
             android:value=".SMImagesSearchActivity" />
 
         <activity
-            android:name="it.iziozi.iziozi.gui.IOBoardActivity"
+            android:name=".gui.IOBoardActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@style/FullscreenTheme" >
@@ -67,7 +67,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="it.iziozi.iziozi.gui.IOCreateButtonActivity"
+            android:name=".gui.IOCreateButtonActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:launchMode="singleTop" >
@@ -76,7 +76,7 @@
                 android:value="it.iziozi.iziozi.gui.IORemoteImageSearchActivity" />
         </activity>
         <activity
-            android:name="it.iziozi.iziozi.gui.IOLocalImageSearchActivity"
+            android:name=".gui.IOLocalImageSearchActivity"
             android:label="@string/app_name" >
 
             <!--
@@ -89,7 +89,7 @@
             -->
         </activity>
         <activity
-            android:name="it.iziozi.iziozi.gui.IORemoteImageSearchActivity"
+            android:name=".gui.IORemoteImageSearchActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name" >
             <intent-filter>
@@ -101,12 +101,23 @@
                 android:resource="@xml/searchable" />
         </activity>
         <activity
-            android:name="it.iziozi.iziozi.gui.IOAboutActivity"
+            android:name=".gui.IOAboutActivity"
             android:label="@string/app_name" >
         </activity>
+
         <meta-data
             android:name="com.crashlytics.ApiKey"
             android:value="21a2e56b3497242af9009ec69be93666a23370ed" />
+
+        <activity
+            android:name=".gui.IOVideoPlayerActivity"
+            android:label="@string/title_activity_iovideo_player"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:parentActivityName=".gui.IOBoardActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="it.iziozi.iziozi.gui.IOBoardActivity" />
+        </activity>
     </application>
 
 </manifest>
