--- a/iziozi/build.gradle
+++ b/iziozi/build.gradle
@@ -44,7 +44,7 @@ android {
     useLibrary  'org.apache.http.legacy'
 
     compileSdkVersion 23
-    buildToolsVersion '21.1.2'
+    buildToolsVersion '23.0.1'
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 23
@@ -61,7 +61,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile files('libs/simple-xml-2.7.1.jar')
     compile files('libs/ormlite-core-4.48.jar')
     compile files('libs/ormlite-android-4.48.jar')
@@ -76,5 +76,5 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.2.0@aar') {
         transitive = true;
     }
-    compile 'com.android.support:appcompat-v7:23.0.0'
+    compile 'com.android.support:appcompat-v7:23.1.0'
 }
