Added support for creating new boards by speaking a set of words.
The implementation searched for each word and if it finds just one it downloads it. If there are multiple words it presents a grid with all the results.

--- a/iziozi/src/main/AndroidManifest.xml
+++ b/iziozi/src/main/AndroidManifest.xml
@@ -107,6 +107,11 @@
             android:label="@string/app_name" >
         </activity>
 
+        <activity
+            android:name=".gui.SpeechBoardActivity"
+            android:label="@string/check_words" >
+        </activity>
+
         <meta-data
             android:name="com.crashlytics.ApiKey"
             android:value="21a2e56b3497242af9009ec69be93666a23370ed" />
