--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jan 26 23:04:07 CET 2016
-sdk.dir=/opt/android-sdk
+#Wed Jan 27 15:16:16 CET 2016
+sdk.dir=/Users/Sabrina/Library/Android/sdk
