--- a/iziozi/build.gradle
+++ b/iziozi/build.gradle
@@ -46,12 +46,15 @@ android {
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 20151021
-        versionName '1.6rc'
+        versionCode 20160208
+        versionName '2.0'
         signingConfig signingConfigs.IziOzi
     }
     buildTypes {
         release {
+            lintOptions {
+                disable 'MissingTranslation'
+            }
         }
     }
     productFlavors {
