--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Feb 08 21:53:16 CET 2016
+#Sat Apr 02 10:35:21 CEST 2016
 sdk.dir=/opt/android-sdk
