--- a/iziozi/build.gradle
+++ b/iziozi/build.gradle
@@ -79,4 +79,5 @@ dependencies {
     }
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.google.code.gson:gson:2.7'
+    compile 'commons-io:commons-io:20030203.000550'
 }
